# java_jni_demo

./: CMakeLists.txt  JNI.md  README.md  gen_jni_headers.sh  package_and_run.sh  pom.xml
.github/workflows/: ci.yml
jni_lib/: CMakeLists.txt  jni_common.cc
src/main/cpp/: jni_common.hpp  jni_demo.cc  jni_wrapper.cc
src/main/java/collections/: ConcurrentTreeMapLoopReproducer.java  TreeSetInfiniteLoop.java
src/main/java/demo/: HelloJni.java
src/main/java/jni/: DummyData.java  JniDemo.java  JniException.java  JniLoader.java  JniSignatureDemo.java  JniWrapper.java
src/main/java/vector/: MockVector.java  VectorExpander.java
src/test/java/demo/: TestHelloJni.java
src/test/java/jni/: TestJniWrapper.java
src/test/java/vector/: TestVectorExpander.java
